# xBRIEF

./: CHANGELOG.md  CONTRIBUTING.md  INTERVIEW-libxbrief-ts.md  INTERVIEW.md  PROJECT-libxbrief-ts.md  PROJECT.md  README.md  SPECIFICATION-libxbrief-ts.md  SPECIFICATION.md  Taskfile.yml  pyproject.toml  warp.xbrief.json
docs/: GUIDE.md  MIGRATION.md  clawflow-wait-model-analysis.md  clawflow-xbrief-execution-opportunity.md  clawflow-xbrief-execution-plan.md  getting-started.md  tron-encoding.md  vbrief-spec-0.5.md  vbrief-spec-0.6.md  xbrief-spec-0.5.md  xbrief-spec-0.6.md  xbrief-spec-0.8.md  xbrief-workflow-profile.md
examples/: construction-project-gantt.xbrief.json  construction-project-gantt.xbrief.tron  dag-plan.xbrief.json  dag-plan.xbrief.tron  invalid-cycle.xbrief.json  minimal-plan.xbrief.json  prd.xbrief.json  retrospective-plan.xbrief.json  rfc854.xbrief.json  software-development-gantt.xbrief.json  structured-plan.xbrief.json  system-of-record-plan.vbrief.json  workflow-invoice-processing.xbrief.json
history/: PRD.md  RELEASE-NOTES-v0.5-beta.md  api-consistency-analysis.md  atomic-classes-proposal.md  atomic-classes-questions.md  exploratory-docs-recommendation.md  extension-alignment-issues.md  extension-docs-analysis.md  go-api-performance-analysis.md  spec-v0.1.md  spec-v0.2.md  spec-v0.3.md  specification-v0.5-draft.md  vspec-conversion-guidelines.md  warp.xbrief.json  warp.xbrief.tron  xBRIEF-extension-api-go.md  xBRIEF-extension-api-python.md  xBRIEF-extension-api-typescript.md  xBRIEF-extension-common.md  xBRIEF-extension-playbooks.md  (+2 more)
(+114 files in other folders)
