[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libxbrief"
version = "0.8.0"
description = "Python library for reading, writing, and validating xBRIEF v0.8 JSON files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "visionik" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=5.0",
]

[tool.setuptools]
packages = ["libxbrief", "libxbrief.serialization", "libxbrief.compat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "test-*.py", "*_test.py"]
